--- a/TestAdmiTEC2025/C/style.css
+++ b/TestAdmiTEC2025/C/style.css
@@ -1,10 +1,11 @@
 * {
   border-radius: 5px;
+  font-size: clamp(0.8rem, 3.8vw, 1.1rem);
 }
 
 body {
   background-color: rgb(181, 234, 250);
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0;
   padding: 0;
   color: #333;
@@ -24,15 +25,31 @@ div {
   background-color: rgba(255, 255, 255, 0.274);
 }
 
-h1{
-    text-align: center;
-    margin-top: 40px;
-    margin-bottom: 40px;
+h1 {
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+h1.title {
+  font-size: clamp(1.5rem, 4.5vw, 2.5rem);
+  font-weight: bold;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 img {
   max-width: 1000px;
   border: 1px solid black;
+}
+
+a {
+  color: rgb(42, 42, 218);
+  text-decoration: none;
+}
+a:hover {
+  color: rgb(0, 119, 231);
+  text-decoration: underline;
 }
 
 label img {
@@ -42,11 +59,17 @@ label img {
 }
 
 .imgDiv {
-  margin-top: 0px;
-  margin-bottom: 0px;
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 10px;
   padding: 0px;
   background-color: transparent;
-    border: none;
+  border: none;
+  text-align: center;
+}
+
+.imgDiv img {
+  max-width: 100%;
 }
 
 .respDiv {
@@ -59,8 +82,8 @@ label img {
 
 .respDiv h1 {
   margin-top: 0;
-    margin-bottom: 10px;
-    font-size: 24px;
+  margin-bottom: 10px;
+  font-size: 24px;
 }
 
 .correct {
@@ -92,8 +115,6 @@ label img {
 
 .content {
   max-width: 100vh;
-  width: 100%;
-  margin-bottom: 20px;
   padding: 40px;
   padding-bottom: 15px;
 }
@@ -102,6 +123,8 @@ label img {
   text-align: left;
   width: 100%;
   margin-top: 0;
+  margin-bottom: 0;
+  line-height: 1.8;
 }
 
 .content > div {
@@ -111,17 +134,66 @@ label img {
   width: 92%;
 }
 
-p{
-    text-align: justify;
-    margin: 5px;
-    padding: 0;
-    width: 100%;
+p {
+  margin-top: 0;
+  margin-bottom: 25px;
+  text-align: left;
+  margin-left: 0;
+  margin-right: 0;
+  padding: 0;
+  width: 100%;
+  line-height: 1.8;
 }
 
-p.center {
-    width: 100%;
-    text-align: center;
-    margin: 0;
+p:last-child {
+  margin-bottom: 0;
+}
+
+p br {
+  display: block;
+  width: 100%;
+  margin-bottom: 10px;
+  height: 10px;
+}
+
+span.indent {
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  text-indent: 5px;
+}
+
+span.center {
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+
+span.quote {
+  display: block;
+  width: auto;
+  text-align: justify;
+  margin: 0;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  background-color: #838de02a;
+  border: 3px solid #838de02a;
+  padding: 15px;
+  font-style: italic;
+
+}
+
+span.final {
+  display: block;
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  margin-top: 10px;
+  font-weight: bold;
 }
 
 .evaluation {
@@ -143,6 +215,7 @@ label {
   cursor: pointer;
   width: 100%;
   padding: 10px;
+  margin-top: 7px;
 }
 label:hover {
   background-color: rgba(255, 255, 255, 0.466);
